# hackathon-qa-agent

./: .gitignore  README.md  __init__.py  requirements.txt  setup.cfg  structure.txt
backend/: config.py  errors.py  main.py  metrics.py  utils.py
backend/data_client/: bitbucket_client.py  jira_client.py  xray_client.py
backend/llm_client/: __init__.py  llm_agent.py  llm_client.py  models.py
backend/routes/: __init__.py  agent_routes.py  diag_routes.py  jira_project_routes.py  junction_routes.py  test_plans_effective_routes.py  test_plans_routes.py  viewer_routes.py
frontend/: app.js  index.html  styles.css
mocks/bitbucket/: changes_by_jira_key.json
mocks/bitbulket/: changes_by_jira_key.json
mocks/jira/: issues.json
mocks/junction/runs/: US-401.run.json  US-402.run.json  US-404.run.json  US-405.run.json  US-406.run.json
mocks/junction/snapshots/: g12_suggestions.snapshot.json
mocks/prompts/: prompt_registry.json
mocks/xray/: test_plans.json  test_plans_enriched.governanceStrict.json  test_plans_enriched.promptA.json  test_plans_enriched.promptB.json  tests_by_requirement.json
