[metadata]
name = hackathon
version = 0.1.0
description = QA Test Plan Agent – Hackathon demo
long_description = file: README.md
long_description_content_type = text/markdown
author = cchereau

[options]
packages = hackathon
package_dir =
    hackathon = .
install_requires =
    fastapi==0.115.0
    uvicorn[standard]==0.30.0
    httpx==0.28.1
    python-dotenv==1.0.1
    pydantic==2.9.0
    tenacity==8.2.3
    aiobreaker==1.2.0
    prometheus_client==0.23.1

[options.packages.find]
where = .
